manifests/product/product-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: product
    version: v1
  name: product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/scheme: "http"
    spec:
      containers:
      - image: tagost/product:v1.0
        name: product
        ports:
        - containerPort: 8080
        resources: {}
status: {}
