manifests/product/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: product
    version: v1
  name: product
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: product
    weight: 100
  wildcardPolicy: None
